--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container{
+  position: relative;
+  text-align: center;
+  color:rgb(204, 6, 6);
+}
+.top {
+  position: absolute;
+  top:5%;
+  left:45%;
+  
+  
+}
+
+.bottom {
+  position: absolute;
+  bottom:5%;
+  left:45%;
+}
+
