--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,20 @@
-
+html{
+  scroll-behavior: smooth;
+}
+.jumbotron{
+  margin: 0px;
+  border-radius: 0px;
+  color:white;
+  font-family:  Helvetica, sans-serif;
+}
 .meme{
   position: relative;
   text-align: center;
+  
  
 }
 #main-img img{
-  width: 40%;
-  height: 300px;
+  
 }
 .top {
   position: absolute;
